--- a/PartyInvites/PartyInvites/Views/Home/Index.cshtml
+++ b/PartyInvites/PartyInvites/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div> 
-        Hello World (from Index view)
+        @ViewBag.Greeting World (from Index view)
     </div>
 </body>
 </html>
